# scripts

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: merge-gate.yml
cron/: scripts.crontab
scripts/: organize_downloads.py  organize_media.py  organize_photos.py  organize_temp_media.py  sync_agents.py  sync_media_library.py
src/nas_scripts/: __main__.py  cli.py
src/nas_scripts/config/: env.py  organize_temp_media.py  sync_media_library.py
src/nas_scripts/jobs/: organize_temp_media.py  sync_media_library.py
src/nas_scripts/utils/: extensions.py  file_metadata.py  filesystem.py  images.py  job.py  locking.py  logging.py  media.py  organizer_paths.py  state.py  verification_cache.py
src/scripts/: __init__.py  __main__.py  cli.py
src/scripts/config/: __init__.py  env.py  organize_temp_media.py  sync_media_library.py
src/scripts/jobs/: __init__.py  organize_temp_downloads.py  organize_temp_media.py  sync_media_library.py
src/scripts/utils/: __init__.py  extensions.py  file_metadata.py  images.py  job.py  logging.py  media.py  organizer_paths.py  state.py  verification_cache.py
tests/integration/: __init__.py
tests/unit/: factories.py  fakes.py  test_cli.py  test_coverage_branches.py
tests/unit/config/: __init__.py  test_config.py
tests/unit/jobs/: __init__.py  test_job_lifecycle.py
tests/unit/organize_temp_media/: test_organize_temp_media.py
tests/unit/sync_media_library/: test_sync_media_library.py
tests/unit/utils/: test_locking.py  test_logging.py  test_media.py  test_state.py
