[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scripts"
version = "0.1.0"
description = "Python automation scripts for a UGREEN NASync DXP4800 Plus"
readme = "README.md"
requires-python = ">=3.14.5"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.22",
    "mypy>=2.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.mypy]
python_version = "3.14"
files = ["src"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src/scripts --cov-report=term-missing --cov-fail-under=92"
markers = [
    "integration: marks tests that touch external systems",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
